--- a/docs/thesis/tesi.tex
+++ b/docs/thesis/tesi.tex
@@ -7,6 +7,7 @@
 % Report: thesis style (or book)
 \documentclass[12pt,a4paper,openright,twoside]{report}
 \usepackage[italian]{babel} % Italian dictionary library
+\usepackage[T1]{fontenc}
 \usepackage[utf8]{inputenc} % Italian characters
 \usepackage{fancyhdr} % Document layout library
 \usepackage{indentfirst} % Indentation at the beginning of the chapters
@@ -18,11 +19,10 @@
 \usepackage{amsmath}
 \usepackage{latexsym}
 \usepackage{amsthm}
-\usepackage{cite}
 \usepackage{listings}
 \usepackage{hyperref}
 \usepackage[square,numbers,sort]{natbib}
-%\bibliographystyle{unsrt}
+% \bibliographystyle{unsrt}
 \bibliographystyle{unsrtnat}
 
 \lstset{
