--- a/docs/thesis/backMatter/biblio.bib
+++ b/docs/thesis/backMatter/biblio.bib
@@ -1,12 +1,47 @@
-%% This BibTeX bibliography file was created using BibDesk.
-%% http://bibdesk.sourceforge.net/
+@misc{Accuweather,
+  author       = {AccuWeather},
+  organization = {AccuWeather},
+  title        = {AccuWeather website},
+  url          = {https://www.accuweather.com/it/it/bologna/212979/air-quality-index/212979},
+  year         = {2025}
+}
 
-%% Created for Luca Lo Iacono at 2016-03-05 16:45:04 +0100
-%% Saved with string encoding Unicode (UTF-8)
+@misc{EuropeanEnvironmentAgency,
+  author       = {European Environment Agency},
+  organization = {European Environment Agency},
+  title        = {European Environment Agency},
+  url          = {https://www.eea.europa.eu/highlights/european-air-quality-index-current},
+  year         = {2025}
+}
 
-@url{latex,
-	Date-Added = {2016-03-05 16:34:41 +0000},
-	Date-Modified = {2016-03-05 16:35:07 +0000},
-	Keywords = {latex},
-	Title = {Latex},
-	Urldate = {https://www.latex-project.org/}}
+@misc{EuropeanEnvironmentAgencyAirPollution,
+  author       = {European Environment Agency},
+  organization = {European Environment Agency},
+  title        = {Air pollution},
+  url          = {https://www.eea.europa.eu/en/topics/in-depth/air-pollution},
+  year         = {2025}
+}
+
+@misc{EuropeanAirQualityIndex,
+  author       = {European Environment Agency},
+  organization = {European Environment Agency},
+  title        = {European air quality index.},
+  url          = {https://airindex.eea.europa.eu/Map/AQI/Viewer/},
+  year         = {2025}
+}
+
+@misc{EuropeanAirQualityMapAndCharts,
+  author       = {European Environment Agency},
+  organization = {European Environment Agency},
+  title        = {European air quality index, map and charts },
+  url          = {https://www.eea.europa.eu/en/analysis/maps-and-charts/index},
+  year         = {2025}
+}
+
+@misc{GoogleMapsAirQuality2024,
+  author       = {Google},
+  title        = {Visualizzare le informazioni sulla qualità dell'aria in Google Maps},
+  url          = {https://support.google.com/maps/answer/11270845?hl=it},
+  year         = {2025},
+  organization = {Google LLC}
+}
