--- a/docs/thesis/backMatter/bibliografia.tex
+++ b/docs/thesis/backMatter/bibliografia.tex
@@ -4,21 +4,11 @@
 
 \rhead[\fancyplain{}{\bfseries BIBLIOGRAFIA}]{\fancyplain{}{\bfseries\thepage}}
 \lhead[\fancyplain{}{\bfseries\thepage}]{\fancyplain{}{\bfseries BIBLIOGRAFIA}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% aggiunge l'intestazione di pagina
 %\chapter*{Bibliografia}
-
 
 \phantomsection
 
-
 \addcontentsline{toc}{chapter}{Bibliografia}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% aggiunge la voce Bibliografia nell'indice
-
-
-
-
 
 \bibliography{backMatter/biblio}{}
-\bibliographystyle{plain}
-
-
+\bibliographystyle{plainnat}
