--- a/docs/thesis/frontMatter/00-introduction.tex
+++ b/docs/thesis/frontMatter/00-introduction.tex
@@ -1,16 +1,12 @@
-%
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\pagenumbering{roman}                   %serve per mettere i numeri romani
-\chapter*{Introduzione}                 %crea l'introduzione (un capitolo
-                                        %   non numerato)
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%imposta l'intestazione di pagina
-\rhead[\fancyplain{}{\bfseries
-INTRODUZIONE}]{\fancyplain{}{\bfseries\thepage}}
-\lhead[\fancyplain{}{\bfseries\thepage}]{\fancyplain{}{\bfseries
-INTRODUZIONE}}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%aggiunge la voce Introduzione
-                                        %   nell'indice
+\pagenumbering{roman} % Roman numbers
+\chapter*{Introduzione} % "*" means that the chapter is not numbered
+
+% Page heading
+\rhead[\fancyplain{}{\bfseries INTRODUZIONE}]{\fancyplain{}{\bfseries\thepage}}
+\lhead[\fancyplain{}{\bfseries\thepage}]{\fancyplain{}{\bfseries INTRODUZIONE}}
+
+% Add entry to index
 \addcontentsline{toc}{chapter}{Introduzione}
 Questa \`e l'introduzione.
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%non numera l'ultima pagina sinistra
-\clearpage{\pagestyle{empty}\cleardoublepage}
+
+\donotmumberlastpageonleft
