--- a/docs/thesis/frontMatter/frontespizio.tex
+++ b/docs/thesis/frontMatter/frontespizio.tex
@@ -4,37 +4,34 @@
 
 \begin{titlepage}
 \begin{center}
-{{\Large{\textsc{Alma Mater Studiorum}}}\\
-{\Large{\textsc{Universit\`a di Bologna}}} \\
-{\textsc{Campus di Cesena}} \rule[0.1cm]{14cm}{0.1mm}
-		\rule[0.5cm]{14cm}{0.6mm}
-DIPARTIMENTO DI INFORMATICA – SCIENZA E INGEGNERIA
-Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche }
+{
+	{\Large{\textsc{Alma Mater Studiorum}}}\\
+	{\Large{\textsc{Universit\`a di Bologna}}} \\
+	{\textsc{Campus di Cesena}}
+	\rule[0.1cm]{14cm}{0.1mm}
+	\rule[0.5cm]{14cm}{0.6mm}
+	DIPARTIMENTO DI INFORMATICA – SCIENZA E INGEGNERIA
+	Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche
+}
 \end{center}
 \vspace{15mm}
 \begin{center}
-{\LARGE{\bf TITOLO DELLA}}\\
-\vspace{3mm}
-{\LARGE{\bf TESI}}\\
+{\LARGE{\bf SIMULATORE DI MISURAZIONI TRAMITE RETE DI SENSORI SULLA QUALITÀ DELL'ARIA: PROGETTO E SVILUPPO}}
 \end{center}
 \vspace{40mm}
 \par
 \noindent
 \begin{minipage}[t]{0.47\textwidth}
-{\large{\bf Relatore:\\
-Prof.ssa \xsupervisor}}
+{\large{\bf Relatore:\\Prof.ssa \xsupervisor}}
 \vspace{5mm}
-{\large{\bf \\Correlatore:\\
-Dr. \xcorrelatore}}
+{\large{\bf \\Correlatore:\\Dr. \xcorrelatore}}
 \end{minipage}
 \hfill
 \begin{minipage}[t]{0.47\textwidth}\raggedleft
-{\large{\bf Presentata da:\\
-\xstudent}}
+{\large{\bf Presentata da:\\\xstudent}}
 \end{minipage}
 \vspace{20mm}
 \begin{center}
-{\large{\bf Sessione I\\%inserire il numero della sessione in cui ci si laurea
-Anno Accademico 2015-2016}}%inserire l'anno accademico a cui si è iscritti
+{\large{\bf Sessione \xsession\\Anno Accademico \xaccademicyear}}
 \end{center}
 \end{titlepage}
