--- a/docs/thesis/backMatter/biblio.bib
+++ b/docs/thesis/backMatter/biblio.bib
@@ -45,3 +45,354 @@
   year         = {2025},
   organization = {Google LLC}
 }
+@techreport{iogp2019,
+  author      = {{International Association of Oil \& Gas Producers}},
+  title       = {Geomatics Guidance Note 7-1: Using the EPSG Geodetic Parameter Dataset},
+  number      = {373-7-1},
+  institution = {IOGP},
+  address     = {London},
+  year        = {2019}
+}
+
+@article{ashkenazi1984,
+  author  = {Ashkenazi, V. and Crane, S.A. and Johnston, G.T. and Millard, S.},
+  title   = {Coordinate systems and map projections for offshore surveying},
+  journal = {International Hydrographic Review},
+  volume  = {61},
+  number  = {2},
+  pages   = {7--23},
+  year    = {1984}
+}
+
+@misc{epsg4326,
+  author       = {EPSG Official Database},
+  title        = {WGS 84 - WGS84 - World Geodetic System 1984, used in GPS - EPSG:4326},
+  howpublished = {EPSG Official Database},
+  url          = {https://epsg.io/4326},
+  note         = {Definizione ufficiale completa con parametri WKT e Proj4},
+  year         = {2022}
+}
+
+@misc{epsg3857,
+  author       = {EPSG Official Database},
+  title        = {WGS 84 / Pseudo-Mercator - Spherical Mercator, Google Maps, OpenStreetMap, Bing, ArcGIS, ESRI - EPSG:3857},
+  howpublished = {EPSG Official Database},
+  url          = {https://epsg.io/3857},
+  note         = {Definizione completa Pseudo-Mercator},
+  year         = {2020}
+}
+
+@misc{epsg32633,
+  author       = {EPSG Official Database},
+  title        = {WGS 84 / UTM zone 33N - EPSG:32633},
+  howpublished = {EPSG Official Database},
+  url          = {https://epsg.io/32633},
+  note         = {Definizione WGS84/UTM zone 33N},
+  year         = {2022}
+}
+
+@misc{epsg3003,
+  author       = {EPSG Official Database},
+  title        = {Monte Mario / Italy zone 1 - EPSG:3003},
+  howpublished = {EPSG Official Database},
+  url          = {https://epsg.io/3003},
+  note         = {Definizione Monte Mario zone 1},
+  year         = {2021}
+}
+
+@misc{wgs84updates,
+  author       = {GPS.GOV},
+  title        = {The world geodetic system 1984 (WGS84) and its updates},
+  howpublished = {GPS.gov},
+  url          = {https://www.gps.gov/governance/agencies/defense/},
+  year         = {2008}
+}
+
+@techreport{epsg2008,
+  author      = {{European Petroleum Survey Group}},
+  title       = {EPSG:3857 - WGS 84 / Pseudo-Mercator},
+  institution = {European Petroleum Survey Group},
+  number      = {Guidance Note 7-2},
+  year        = {2008},
+  note        = {Disponibile online su epsg.org}
+}
+
+@book{hofmann2007,
+  author    = {Hofmann-Wellenhof, B. and Lichtenegger, H. and Wasle, E.},
+  title     = {GNSS – Global Navigation Satellite Systems: GPS, GLONASS, Galileo, and more},
+  publisher = {Springer},
+  year      = {2007}
+}
+
+@article{battersby2014,
+  author  = {Battersby, S.E. and Finn, M.P. and Usery, E.L. and Yamamoto, K.H.},
+  title   = {Implications of Web Mercator and Its Use in Online Mapping},
+  journal = {Cartographica: The International Journal for Geographic Information and Geovisualization},
+  volume  = {49},
+  number  = {2},
+  pages   = {85--101},
+  year    = {2014}
+}
+
+@manual{google2005,
+  author = {{Google Inc.}},
+  title  = {Google Maps API Documentation},
+  year   = {2005},
+  note   = {Documentazione tecnica originale sulla implementazione Web Mercator}
+}
+
+@article{fonte2022,
+  author  = {Fonte, C.C. and Antoniou, V. and Bastin, L. and Estima, J. and Arsanjani, J.J. and Bayas, J.C.L. and See, L. and Vatseva, R.},
+  title   = {OSM Science—The Academic Study of the OpenStreetMap Project, Data, Contributors, Community, and Applications},
+  journal = {ISPRS International Journal of Geo-Information},
+  volume  = {11},
+  number  = {4},
+  pages   = {230},
+  year    = {2022},
+  doi     = {10.3390/ijgi11040230},
+  url     = {https://www.mdpi.com/2220-9964/11/4/230}
+}
+
+@article{neis2012,
+  author    = {Neis, P. and Zipf, A.},
+  title     = {OpenStreetMap},
+  journal   = {International Journal of Interactive Communication Systems and Technologies},
+  volume    = {2},
+  number    = {1},
+  pages     = {69--78},
+  year      = {2012},
+  publisher = {IGI Global}
+}
+
+@article{sehra2013,
+  author  = {Sehra, Sukhjit Singh and Singh, Jaiteg and Rai, Hardeep Singh},
+  title   = {Assessment of OpenStreetMap Data - A Review},
+  journal = {International Journal of Computer Applications},
+  volume  = {76},
+  number  = {8},
+  pages   = {1--8},
+  year    = {2013},
+  url     = {https://arxiv.org/abs/1309.6608}
+}
+
+@misc{osmhistory2024,
+  author       = {OpenStreetMap Wiki},
+  title        = {History of OpenStreetMap},
+  howpublished = {OpenStreetMap Wiki},
+  url          = {https://wiki.openstreetmap.org/wiki/History_of_OpenStreetMap},
+  year         = {2024},
+  note         = {Accesso: 2024}
+}
+
+@misc{osmfoundation2006,
+  author       = {{OpenStreetMap Foundation}},
+  title        = {About OpenStreetMap},
+  howpublished = {OpenStreetMap Wiki},
+  url          = {https://wiki.openstreetmap.org/wiki/About_OpenStreetMap},
+  year         = {2006},
+  note         = {Fondazione istituita il 22 agosto 2006}
+}
+
+@misc{coast2004,
+  author       = {Coast, Steve},
+  title        = {First street entered},
+  howpublished = {OpenStreetMap mailing list},
+  url          = {https://lists.openstreetmap.org/pipermail/talk/2004-December/000158.html},
+  year         = {2004},
+  month        = {December},
+  day          = {11}
+}
+
+@misc{quinn2022,
+  author       = {Quinn, Sterling},
+  title        = {Using OpenStreetMap for your research: leveraging a massive global geographic database that emphasizes local knowledge},
+  howpublished = {SFU Library Scholarly Publishing},
+  url          = {https://www.lib.sfu.ca/help/publish/scholarly-publishing/radical-access/openstreetmap-your-research},
+  year         = {2022}
+}
+
+@misc{osmcopyright2024,
+  author       = {OpenStreetMap},
+  title        = {Copyright and License},
+  howpublished = {OpenStreetMap},
+  url          = {https://www.openstreetmap.org/copyright},
+  year         = {2024}
+}
+
+@misc{historyinfo2024,
+  author       = {History of Information},
+  title        = {OpenStreetMap Begins},
+  howpublished = {History of Information},
+  url          = {https://www.historyofinformation.com/detail.php?id=3807},
+  year         = {2024}
+}
+@misc{elements2024,
+  author       = {OpenStreetMap Wiki},
+  title        = {Elements},
+  howpublished = {OpenStreetMap Wiki},
+  url          = {https://wiki.openstreetmap.org/wiki/Elements},
+  year         = {2024},
+  note         = {Documentazione del modello dati OSM: nodi, percorsi e relazioni}
+}
+
+@misc{osmdata2024,
+  author       = {FLOSS Manuals},
+  title        = {The OpenStreetMap data model},
+  howpublished = {FLOSS Manuals},
+  url          = {https://archive.flossmanuals.net/openstreetmap/the-osm-data-model.html},
+  year         = {2024},
+  note         = {Guida completa al modello dati OpenStreetMap}
+}
+
+@misc{relations2024,
+  author       = {OpenStreetMap Wiki},
+  title        = {Relation},
+  howpublished = {OpenStreetMap Wiki},
+  url          = {https://wiki.openstreetmap.org/wiki/Relation},
+  year         = {2024},
+  note         = {Documentazione delle relazioni OSM}
+}
+
+@misc{mapfeatures2024,
+  author       = {OpenStreetMap Wiki},
+  title        = {Map features},
+  howpublished = {OpenStreetMap Wiki},
+  url          = {https://wiki.openstreetmap.org/wiki/Map_features},
+  year         = {2024},
+  note         = {Sistema di tag e caratteristiche delle mappe OSM}
+}
+
+@misc{overpass2024,
+  author       = {OpenStreetMap Wiki},
+  title        = {Overpass API},
+  howpublished = {OpenStreetMap Wiki},
+  url          = {https://wiki.openstreetmap.org/wiki/Overpass_API},
+  year         = {2024},
+  note         = {API per interrogazioni avanzate sui dati OSM}
+}
+
+@misc{overpassturbo2024,
+  author       = {Web-based data mining tool},
+  title        = {overpass turbo},
+  howpublished = {Web-based data mining tool},
+  url          = {https://overpass-turbo.eu/},
+  year         = {2024},
+  note         = {Interfaccia web interattiva per Overpass API}
+}
+
+@misc{osmtutorial2024,
+  author       = {Algorithms for Geographic Data},
+  title        = {Using OpenStreetMap data},
+  howpublished = {Algorithms for Geographic Data},
+  url          = {https://algo.win.tue.nl/tutorials/openstreetmap/},
+  year         = {2024},
+  note         = {Tutorial tecnico per l'utilizzo dei dati OSM}
+}
+
+@article{vargas2020,
+  author  = {Vargas-Muñoz, J.E. and Srivastava, S. and Tuia, D. and Falcão, A.X.},
+  title   = {OpenStreetMap: Challenges and Opportunities in Machine Learning and Remote Sensing},
+  journal = {IEEE Geoscience and Remote Sensing Magazine},
+  volume  = {8},
+  number  = {3},
+  pages   = {44--55},
+  year    = {2020},
+  url     = {https://arxiv.org/abs/2007.06277},
+  note    = {Review sulle applicazioni ML e remote sensing con OSM}
+}
+
+@misc{sfu2022,
+  author       = {Quinn, Sterling},
+  title        = {Using OpenStreetMap for your research: leveraging a massive global geographic database that emphasizes local knowledge},
+  howpublished = {SFU Library Scholarly Publishing},
+  url          = {https://www.lib.sfu.ca/help/publish/scholarly-publishing/radical-access/openstreetmap-your-research},
+  year         = {2022},
+  note         = {Guida per ricercatori sull'uso di OSM}
+}
+
+@misc{pandey2020,
+  author       = {Pandey, Sandeep},
+  title        = {OpenStreetMap: Access, data mining and data manipulation},
+  howpublished = {Personal Blog},
+  url          = {https://ikespand.github.io/posts/OpenStreetMap/},
+  year         = {2020},
+  month        = {October},
+  note         = {Tutorial su accesso e manipolazione dati OSM con Python}
+}
+
+@misc{pandey2025,
+  author       = {Pandey, Sandeep},
+  title        = {Open source routing: Exploring Open route service (OSR)},
+  howpublished = {Personal Blog},
+  url          = {https://ikespand.github.io/posts/osr-docker/},
+  year         = {2025},
+  month        = {February},
+  note         = {Setup e utilizzo di Open Route Service}
+}
+
+@article{janakiev2023,
+  author  = {Janakiev, Nikolai},
+  title   = {Loading Data from OpenStreetMap with Python and the Overpass API},
+  journal = {TDS Archive, Medium},
+  year    = {2023},
+  month   = {May},
+  url     = {https://towardsdatascience.com/loading-data-from-openstreetmap-with-python-and-the-overpass-api-513882a27fd0},
+  note    = {Tutorial Python per accesso dati OSM via Overpass API}
+}
+
+@misc{geoapify2024,
+  author       = {Geoapify Documentation},
+  title        = {3 Ways to get OpenStreetMap(OSM) Data},
+  howpublished = {Geoapify Documentation},
+  url          = {https://www.geoapify.com/ways-to-get-openstreetmap-data/},
+  year         = {2024},
+  month        = {May},
+  note         = {Metodi per ottenere e utilizzare dati OSM}
+}
+
+@misc{osmsharp2024,
+  author       = {Itinero Documentation},
+  title        = {OpenStreetMap Data Model},
+  howpublished = {Itinero Documentation},
+  url          = {https://docs.itinero.tech/docs/osmsharp/osm.html},
+  year         = {2024},
+  note         = {Documentazione del modello dati OSM per sviluppatori}
+}
+
+@misc{overpassdev2024,
+  author       = {Overpass API Documentation},
+  title        = {The Data Model of OpenStreetMap},
+  howpublished = {Overpass API Documentation},
+  url          = {https://dev.overpass-api.de/overpass-doc/en/preface/osm_data_model.html},
+  year         = {2024},
+  note         = {Documentazione tecnica del modello dati per Overpass API}
+}
+
+@misc{linkedgeodata2009,
+  author       = {Auer, S. and Lehmann, J. and Hellmann, S.},
+  title        = {LinkedGeoData: Adding a Spatial Dimension to the Web of Data},
+  howpublished = {ResearchGate},
+  year         = {2009},
+  note         = {Architettura tecnica OpenStreetMap e componenti}
+}
+
+@misc{EEA2017IndiceEuropeo,
+  author = {{Agenzia Europea dell'Ambiente} and {Commissione Europea}},
+  title  = {Indice Europeo della Qualità dell'Aria: informazioni aggiornate sulla qualità dell'aria a portata di mano},
+  year   = {2017},
+  url    = {https://www.eea.europa.eu/it/highlights/indice-europeo-della-qualita-dell2019aria}
+}
+
+@misc{chimica-online-equatore,
+  author = {{Chimica Online}},
+  title  = {Che cos'è l'equatore},
+  url    = {https://www.chimica-online.it/astronomia/che-cos-e-l-equatore.htm},
+  year   = {2025}
+}
+
+@misc{topgeometri,
+  author = {{Topgeometri}},
+  title  = {Concetti base sul sistema WGS84 del GPS},
+  url    = {https://blog.topgeometri.it/2022/12/24/concetti-base-sul-sistema-wgs84-del-gps/},
+  year   = {2022}
+}
