--- a/docs/thesis/frontMatter/frontespizio.tex
+++ b/docs/thesis/frontMatter/frontespizio.tex
@@ -11,12 +11,12 @@
 	\rule[0.1cm]{14cm}{0.1mm}
 	\rule[0.5cm]{14cm}{0.6mm}
 	DIPARTIMENTO DI INFORMATICA – SCIENZA E INGEGNERIA
-	Corso di Laurea Magistrale in Ingegneria e Scienze Informatiche
+	Corso di Laurea Triennale in Ingegneria e Scienze Informatiche
 }
 \end{center}
 \vspace{15mm}
 \begin{center}
-{\LARGE{\bf SIMULATORE DI MISURAZIONI TRAMITE RETE DI SENSORI SULLA QUALITÀ DELL'ARIA: PROGETTO E SVILUPPO}}
+{\LARGE{\bf PROGETTAZIONE E SVILUPPO DI UN SISTEMA A MICROSERVIZI PER LA RACCOLTA DI DATI ATMOSFERICI}}
 \end{center}
 \vspace{40mm}
 \par
