--- a/docs/thesis/tesi.tex
+++ b/docs/thesis/tesi.tex
@@ -27,6 +27,10 @@
 \usepackage{colortbl}
 \usepackage{array}
 \usepackage{adjustbox}
+\usepackage{tikz}
+\usepackage{tikz-3dplot}
+\usepackage{float}
+\usepackage{fancyvrb}
 
 \setlength{\headheight}{14.49998pt}
 \addtolength{\topmargin}{-2.49998pt}
@@ -42,8 +46,10 @@
 \lstset{
   frame=single,   % Adds a frame (border) around code blocks
                   % single means it will be a continuous line that completely surrounds the code
-  breaklines=true % Enables automatic line breaking for long lines
+  breaklines=true,% Enables automatic line breaking for long lines
                   % When a line of code is too long to fit within the page width, it will be automatically broken and continued on the next line
+  numbers=left,
+  basicstyle=\ttfamily\small,
 }
 
 \oddsidemargin=30pt \evensidemargin=20pt    % Margins
@@ -62,7 +68,7 @@
 %%%%%%%%%%%%%%%%%%%
 \newcommand{\xstudent}{Matteo Zeno Bagli}
 \newcommand{\xsupervisor}{Silvia Mirri}
-\newcommand{\xcorrelatore}{Giovanni Delnevo}
+\newcommand{\xcorrelatore}{Kelvin Oluwada Milare Obuneme Olaiya}
 \newcommand{\xsession}{II}
 \newcommand{\xaccademicyear}{2024-2025}
 \newcommand{\donotmumberlastpageonleft}{\clearpage{\pagestyle{empty}\cleardoublepage}}
